Add '24w11a' sources