@@ -1,6 +1,6 @@
 package net.minecraft.world.entity.ai.behavior;
 
-import com.google.common.collect.ImmutableMap;
+import java.util.Map;
 import java.util.Optional;
 import java.util.function.Predicate;
 import javax.annotation.Nullable;
@@ -18,7 +18,7 @@ import net.minecraft.world.entity.ai.util.LandRandomPos;
 import net.minecraft.world.level.BlockGetter;
 import net.minecraft.world.phys.Vec3;
 
-public class AnimalPanic extends Behavior<PathfinderMob> {
+public class AnimalPanic<E extends PathfinderMob> extends Behavior<E> {
    private static final int PANIC_MIN_DURATION = 100;
    private static final int PANIC_MAX_DURATION = 120;
    private static final int PANIC_DISTANCE_HORIZONTAL = 5;
@@ -27,39 +27,40 @@ public class AnimalPanic extends Behavior<PathfinderMob> {
          || var0.isFreezing()
          || var0.isOnFire();
    private final float speedMultiplier;
-   private final Predicate<PathfinderMob> shouldPanic;
+   private final Predicate<E> shouldPanic;
 
    public AnimalPanic(float var1) {
-      this(var1, DEFAULT_SHOULD_PANIC_PREDICATE);
+      this(var1, DEFAULT_SHOULD_PANIC_PREDICATE::test);
    }
 
-   public AnimalPanic(float var1, Predicate<PathfinderMob> var2) {
-      super(ImmutableMap.of(MemoryModuleType.IS_PANICKING, MemoryStatus.REGISTERED, MemoryModuleType.HURT_BY, MemoryStatus.VALUE_PRESENT), 100, 120);
+   public AnimalPanic(float var1, Predicate<E> var2) {
+      super(Map.of(MemoryModuleType.IS_PANICKING, MemoryStatus.REGISTERED, MemoryModuleType.HURT_BY, MemoryStatus.REGISTERED), 100, 120);
       this.speedMultiplier = var1;
       this.shouldPanic = var2;
    }
 
-   protected boolean checkExtraStartConditions(ServerLevel var1, PathfinderMob var2) {
-      return this.shouldPanic.test(var2);
+   protected boolean checkExtraStartConditions(ServerLevel var1, E var2) {
+      return this.shouldPanic.test((E)var2)
+         && (var2.getBrain().hasMemoryValue(MemoryModuleType.HURT_BY) || var2.getBrain().hasMemoryValue(MemoryModuleType.IS_PANICKING));
    }
 
-   protected boolean canStillUse(ServerLevel var1, PathfinderMob var2, long var3) {
+   protected boolean canStillUse(ServerLevel var1, E var2, long var3) {
       return true;
    }
 
-   protected void start(ServerLevel var1, PathfinderMob var2, long var3) {
+   protected void start(ServerLevel var1, E var2, long var3) {
       var2.getBrain().setMemory(MemoryModuleType.IS_PANICKING, true);
       var2.getBrain().eraseMemory(MemoryModuleType.WALK_TARGET);
    }
 
-   protected void stop(ServerLevel var1, PathfinderMob var2, long var3) {
+   protected void stop(ServerLevel var1, E var2, long var3) {
       Brain var5 = var2.getBrain();
       var5.eraseMemory(MemoryModuleType.IS_PANICKING);
    }
 
-   protected void tick(ServerLevel var1, PathfinderMob var2, long var3) {
+   protected void tick(ServerLevel var1, E var2, long var3) {
       if (var2.getNavigation().isDone()) {
-         Vec3 var5 = this.getPanicPos(var2, var1);
+         Vec3 var5 = this.getPanicPos((E)var2, var1);
          if (var5 != null) {
             var2.getBrain().setMemory(MemoryModuleType.WALK_TARGET, new WalkTarget(var5, this.speedMultiplier, 0));
          }
@@ -67,7 +68,7 @@ public class AnimalPanic extends Behavior<PathfinderMob> {
    }
 
    @Nullable
-   private Vec3 getPanicPos(PathfinderMob var1, ServerLevel var2) {
+   private Vec3 getPanicPos(E var1, ServerLevel var2) {
       if (var1.isOnFire()) {
          Optional var3 = this.lookForWater(var2, var1).map(Vec3::atBottomCenterOf);
          if (var3.isPresent()) {
